# Spice21

./: .dockerignore  .gitignore  Cargo.toml  build.sh  license.txt  readme.md  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yml  js.yml  nightly.yml  python.yml  test.yml
scripts/: build.sh  publish.sh
spice21/: .gitignore  Cargo.toml  Untitled.ipynb  ac.json  build.rs  dev.md  readme.md  rustfmt.toml  stream.ac.json
spice21/protos/: mos.proto  spice21.proto
spice21/resources/: test_bsim4_cmos_ro_tran.json  test_bsim4_nmos_ro_tran.json  test_bsim4_pmos_ro_tran.json  test_mos0_cmos_ro_tran.json  test_mos1_cmos_ro_tran.json  test_mos1_nmos_ro_tran.json  test_mos1_pmos_ro_tran.json
spice21/scripts/: clean.py
spice21/src/: analysis.rs  assert.rs  bsim4.proto  circuit.rs  ckt.rs  comps.rs  defs.rs  elab.rs  lib.rs  mos.proto  proto.rs  spice21.proto  spnum.rs  spresult.rs  tests.rs  tr0.rs  writer.rs
spice21/src/comps/: bsim4.rs  bsim4defs.rs  cmath.rs  diode.rs  mod.rs  mos.rs
spice21/src/comps/bsim4/: bsim4defs.rs  bsim4derive.rs  bsim4inst.rs  bsim4modelvals.rs  bsim4ports.rs  bsim4solver.rs  cache.rs  mod.rs  stamp.rs  tests.rs  tran.rs
spice21/src/comps/bsim4/inst/: mod.rs
spice21/src/comps/bsim4/model/: mod.rs  vals.rs
spice21/src/sparse21/: mod.rs  system.rs
spice21int/: Cargo.toml
spice21int/src/: lib.rs
spice21io/: .gitignore  Dockerfile  index.js  package.json
spice21io/test/: test.js
spice21js/: .gitignore  package.json  readme.md
spice21js/lib/: index.js
spice21js/native/: Cargo.toml
spice21js/native/src/: lib.rs
spice21js/test/: test.js
spice21opentechs/: Cargo.toml
spice21opentechs/src/: lib.rs
spice21opentechs/src/ptm65/: mod.rs  nmos.yaml  pmos.yaml  tests.rs
spice21procs/: Cargo.toml
spice21procs/src/: lib.rs
spice21protos/: Cargo.toml  build.rs
spice21protos/src/: bsim4.proto  lib.rs  spice21.proto
spice21py/: .gitignore  Cargo.toml  build.sh  pyproject.toml  readme.md
spice21py/.cargo/: config
spice21py/spice21/: __init__.py
spice21py/spice21py/: __init__.py  protos.py
spice21py/spice21py/protos/: __init__.py  _init.py
spice21py/spice21py/tests/: test_spice21.py
spice21py/src/: lib.rs
spice21py/tests/: test_spice21.py
spice21r/: Cargo.toml
spice21s/: Cargo.toml
