[package]
name = "spice21procs"
version = "0.1.5"
authors = [
    "Dan Fritchman <dan@fritch.mn>",
    "HW21 <hw21@hw21.io>"
]
edition = "2018"
license = "BSD-3-Clause"
description = "Spice21 Procedural Macros"

[dependencies]
spice21int = { package="spice21int", version="0.1.5", path = "../spice21int" }
syn = "1.0"
quote = "1.0"
prost = "0.6.1"

[lib]
proc-macro = true
