[package]
name = "spice21protos"
version = "0.1.4"
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
prost = "0.6.1"
prost-types = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.88"

[build-dependencies]
prost-build = "0.6.1"
serde_derive = "1.0.88"
