[package]
name = "spice21py"
version = "0.1.4"
authors = [
    "Dan Fritchman <dan@fritch.mn>",
    "HW21 <hw21@hw21.io>"
]
edition = "2018"
license = "BSD-3-Clause"
description = "SPICE for the 21st Century"

[lib]
name = "spice21py"
crate-type = ["cdylib"]

[dependencies]
spice21 = "0.1.4"
pyo3 = {version = "0.11.1", features = ["extension-module"]}

# Local dev path 
# [patch.crates-io]
# spice21 = { path = "../spice21" }

# Note this is really what sets Python install-dependencies
# for Maturin-built projects (not pyproject.toml)! 
[package.metadata.maturin]
requires-dist = ["protobuf>=3.13.0"]
