[project]
name = "spice21"
version = "0.1.4"
description = "SPICE for the 21st Century"
authors = [
    "Dan Fritchman <dan@fritch.mn>",
    "HW21 <hw21@hw21.io>"
]
license = "BSD-3-Clause"
readme = "readme.md"
python = "^3.6"
homepage = "https://github.com/HW21/Spice21"
repository = "https://github.com/HW21/Spice21"
documentation = "https://github.com/HW21/Spice21"

[dependencies]
protobuf = "^3.13.0"

[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["path/**/*", "spice21py/*.py"]

[pytest]
testpaths = "tests"
